--- a/face_data.ipynb
+++ b/face_data.ipynb
@@ -30,6 +30,7 @@
     "import os,h5py,pickle\n",
     "\n",
     "from models import *\n",
+    "from datasets.simulated_face import FaceDataset\n",
     "from baseline_method_v2_1 import Our_method, calibrate_model, evaluate, inference, pickling\n",
     "\n",
     "import warnings\n",
@@ -57,87 +58,6 @@
     "To benchmark the performance of neural networks on the task of probability estimation, we build a synthetic dataset based on UTKFace, which contains faces images and associated ages. \n",
     "\n",
     "Each sample in the dataset consists of a face image $x_i$ and a corresponding age $z_i$ of the person. We use the age of the $i$th person $z_i$ to assign them a risk of contracting a disease $p_i= \\psi(z_i)$ for a fixed function $\\psi: \\mathbb{N} \\rightarrow [0,1]$. Then we simulate whether the person actually contracts the illness by assigning it a label $y_i=1$ with probability $p_i$, and $y_i=0$ otherwise. The probability-estimation task is to estimate the ground-truth probability $p_i$ from the face image $x_i$, which requires learning to discriminate age and map it to the corresponding risk."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "class Face_dataset(torch.utils.data.Dataset):\n",
-    "    def __init__(self, root, prob_type, mode='train', std_classifier=False):\n",
-    "        with h5py.File(root + mode + '_im.h5', 'r') as f:\n",
-    "            self.keys = list(f.keys())\n",
-    "        self.prob_type = prob_type\n",
-    "        self.root = root\n",
-    "        self.mode = mode\n",
-    "        self.proposed_probs = None\n",
-    "        self.std_classifier = std_classifier\n",
-    "        if not hasattr(self, 'img_data'):\n",
-    "            self.open_hdf5()\n",
-    "\n",
-    "    def open_hdf5(self):\n",
-    "        self.img_data = h5py.File(self.root + self.mode + '_im.h5', 'r')\n",
-    "        if self.prob_type == 'eq':\n",
-    "            self.target_10 = h5py.File(self.root + self.mode + '_' + self.prob_type + '_prob.h5', 'r')\n",
-    "        else:\n",
-    "            self.target_10 = h5py.File(self.root + \"labels_\" + self.prob_type + '_' + self.mode + '.h5', 'r')\n",
-    "        if self.prob_type in {'eq', 'unif'}:\n",
-    "            self.prob_sim_func = lambda x: x\n",
-    "        elif self.prob_type == 'sig':\n",
-    "            self.prob_sim_func = lambda x: 1.0 - expit((x-0.29) * 25)\n",
-    "        elif self.prob_type == 'scaled':\n",
-    "            self.prob_sim_func = lambda x: x / 2.5\n",
-    "        elif self.prob_type == 'mid':\n",
-    "            self.prob_sim_func = lambda x: x / 3.0 + 0.35\n",
-    "        elif self.prob_type == 'step':\n",
-    "            self.prob_sim_func = lambda x: (x < 0.2) * 0.1 + ((x >= 0.2) & (x < 0.4)) * 0.3 + \\\n",
-    "                    ((x >= 0.4) & (x < 0.6)) * 0.5 + ((x >= 0.6) & (x < 0.8)) * 0.7 + (x >= 0.8) * 0.9\n",
-    "        else:\n",
-    "            raise NotImplementedError\n",
-    "\n",
-    "        self.target_prob = h5py.File(self.root + self.mode + '_label.h5', 'r')\n",
-    "\n",
-    "\n",
-    "    def __getitem__(self, index):\n",
-    "        data = (torch.tensor(self.img_data[self.keys[index]]).clone().permute(2, 0, 1)) / 255\n",
-    "        target_10 = torch.tensor(np.array(self.target_10[self.keys[index]])).clone()\n",
-    "        target_prob = self.prob_sim_func(\n",
-    "            torch.minimum(torch.tensor(self.target_prob[self.keys[index]][0, 0]) / 100.0, torch.tensor(1.)))\n",
-    "        if self.prob_type == 'ineq':\n",
-    "            if target_prob <= 0.5:\n",
-    "                target_prob /= 2\n",
-    "        if self.proposed_probs is not None:\n",
-    "            probs = self.proposed_probs[index]\n",
-    "        else:\n",
-    "            probs = 0\n",
-    "        if self.std_classifier:\n",
-    "            target_10 = (10 * target_prob).long()\n",
-    "        return data, target_10, probs, index, target_prob\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.keys)\n",
-    "\n",
-    "transform_train = transforms.Compose([\n",
-    "    transforms.RandomCrop(32, padding=4),\n",
-    "    transforms.RandomHorizontalFlip(),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
-    "])\n",
-    "\n",
-    "transform_test = transforms.Compose([\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
-    "])\n",
-    "\n",
-    "\n",
-    "def unpickling(file):\n",
-    "    return pickle.load(open(file, 'rb'))\n",
-    "\n"
    ]
   },
   {
@@ -381,7 +301,7 @@
    },
    "outputs": [],
    "source": [
-    "from baseline_method_v2 import TemperatureScaling\n",
+    "from calibration_tools.postprocessing import TemperatureScaling\n",
     "\n",
     "net.load_state_dict(checkpoint['net'])\n",
     "\n",
@@ -763,8 +683,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Miscalibration due to overfitting and how to avoid it\n",
-    "\n"
+    "# Miscalibration due to overfitting and how to avoid it\n"
    ]
   },
   {
@@ -773,11 +692,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#restrore saved prediction output to generate Figure 4 in the paper\n",
     "\n",
+    "OUTPUT_P_DIR = 'result/'\n",
     "\n",
-    "OUTPUT_P_CE_DIR = 'crossentropy/'\n",
-    "OUTPUT_P_OUR_DIR = 'ours_bin/'\n",
-    "OUTPUT_P_CS_DIR = 'continuous_sampling/'\n",
+    "def unpickling(file):\n",
+    "    return pickle.load(open(file, 'rb'))\n",
     "\n",
     "\n",
     "def binned_hist_output_prob_multiple(pickled_prob,title,n_bins,distribution,save=True,save_dir = 'output_prob_plot/'):\n",
@@ -931,10 +851,10 @@
     "\n",
     "\n",
     "binned_hist_output_prob_multiple([ \n",
-    "                                OUTPUT_P_CS_DIR + 'step_epoch_301_output_prob.p', #continuous sampling to generate Infinite Data\n",
-    "                                OUTPUT_P_CE_DIR + 'step_overfit_output_prob.p', #crossentropy overfit\n",
-    "                                OUTPUT_P_OUR_DIR + 'step_epoch_1_output_prob.p', #crossentropy early stop model\n",
-    "                                OUTPUT_P_OUR_DIR + 'step_output_prob.p', # ours(bin) best result\n",
+    "                                OUTPUT_P_DIR + 'discrete_infinite_output_prob.p', #continuous sampling to generate Infinite Data\n",
+    "                                OUTPUT_P_DIR + 'discrete_overfit_output_prob.p', #crossentropy overfit\n",
+    "                                OUTPUT_P_DIR + 'discrete_early_stop_output_prob.p', #crossentropy early stop model\n",
+    "                                OUTPUT_P_DIR + 'discrete_cape_bin_output_prob.p', # ours(bin) best result\n",
     "                                 ],\n",
     "                                 [\n",
     "                                  'Infinite Data',\n",
@@ -948,10 +868,10 @@
     "                                )\n",
     "    \n",
     "binned_scatter_output_prob_multiple([ \n",
-    "                                  OUTPUT_P_CS_DIR + 'unif_epoch_501_output_prob.p', #continuous sampling\n",
-    "                                  OUTPUT_P_CE_DIR + 'unif_overfit_output_prob.p', #crossentropy overfit\n",
-    "                                  OUTPUT_P_OUR_DIR + 'unif_epoch_1_output_prob.p', #crossentropy early stop model\n",
-    "                                  OUTPUT_P_OUR_DIR + 'unif_output_prob.p', # ours(bin) best result\n",
+    "                                  OUTPUT_P_DIR + 'unif_infinite_output_prob.p', #continuous sampling\n",
+    "                                  OUTPUT_P_DIR + 'unif_overfit_output_prob.p', #crossentropy overfit\n",
+    "                                  OUTPUT_P_DIR + 'unif_early_stop_output_prob.p', #crossentropy early stop model\n",
+    "                                  OUTPUT_P_DIR + 'unif_cape_bin_output_prob.p', # ours(bin) best result\n",
     "                                 ],\n",
     "                                 [\n",
     "                                  'Infinite Data',\n",
