--- a/examples/UTKFace/face_demo.ipynb
+++ b/examples/UTKFace/face_demo.ipynb
@@ -31,7 +31,6 @@
     "\n",
     "from models import *\n",
     "from datasets.simulated_face import FaceDataset\n",
-    "from baseline_method_v2_1 import Our_method, calibrate_model, evaluate, inference, pickling\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -160,6 +159,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from calibration_tools.cape import CaPE\n",
+    "from calibration_tools.utils import calibrate_model\n",
+    "\n",
+    "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.SGD(net.parameters(), lr=1e-4,\n",
     "                      momentum=0.9, weight_decay=5e-4)\n",
